style: set pagination as fixed to make it visible at all times

--- a/frontend/src/index.module.css
+++ b/frontend/src/index.module.css
@@ -99,7 +99,7 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
   border-radius: 0.5rem;
 
   outline: 0;
