--- a/frontend/src/ui/blocks/locations/locations-tab.css
+++ b/frontend/src/ui/blocks/locations/locations-tab.css
@@ -1,6 +1,7 @@
 .hero {
   max-width: 45rem;
   width: 100%;
+  position: relative;
 
   .location-card__container {
     width: 100%;
@@ -10,11 +11,17 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    margin-bottom: 1rem;
     
   }
 
   .pagination {
-    padding: 1.5rem 1.5rem 0.5rem 1.5rem;
+    background-color: #111111;
+    width: calc(100% - 3rem);
+    position: sticky;
+    bottom: -0.01rem;
+    left: 0;
+    padding: 1.5rem;
   }
 
 }
